--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,5 @@
     "js": ["script/jquery-2.2.4.min.js", "script/watch.js"]
   }],
 
-  "permissions": ["webRequest", "http://*/", "https://*/"]
+  "permissions": ["webRequest", "https://*.facebook.com/*", "http://*.facebook.com/*"]
 }
