--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
   "content_scripts": [{
     "matches": ["https://*.facebook.com/*"],
-    "js": ["script/jquery-2.2.4.min.js", "script/watch.js"]
+    "js": ["script/watch.js"]
   }],
 
   "permissions": ["webRequest", "https://*.facebook.com/*", "http://*.facebook.com/*"]
